basic node hooks, need to remove the getter from state so state doesnt need to be alled as getter function. React doesnt do that.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>Testing To see how much I really "need" React</title>
   </head>
   <body>
-    <div>First Test!</div>
+    <div id="test">First Test!</div>
+    <div id="test2">Test2</div>
+    <script src="scripts/HOC.js"></script>
   </body>
 </html>
