--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <body>
     <div id="test">First Test!</div>
     <div id="test2">Test2</div>
-    <script src="scripts/HOC.js"></script>
+    <script src="scripts/React.js"></script>
   </body>
 </html>
