added JSX and simple state functions, now to combine :/

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
     <title>Testing To see how much I really "need" React</title>
+
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div id="test">First Test!</div>
-    <div id="test2">Test2</div>
-    <script src="scripts/React.js"></script>
+    <div id="test"></div>
+    <script src="lib/index.js"></script>
   </body>
 </html>
